--- a/service_manifest.yml
+++ b/service_manifest.yml
@@ -1,7 +1,7 @@
 # Name of the service
 name: MobSFStatic
 # Version of the service
-version: latest
+version: $SERVICE_TAG
 # Description of the service
 description: >
   ALv4 MobSF Static analyzer result fetcher
@@ -16,6 +16,6 @@ enabled: true
 is_external: true
 licence_count: 0
 docker_config:
-  image: localhost:5000/testing/assemblyline-service-mobsfstatic:latest
+  image: ewifly/assemblyline-service-mobsfstatic:$SERVICE_TAG
   cpu_cores: 1.0
-  ram_mb: 1024
+  ram_mb: 512
