--- a/service_manifest.yml
+++ b/service_manifest.yml
@@ -36,26 +36,26 @@ config:
   framework_url: 'http://192.168.10.78:8000/'
 
 heuristics:
-  # - description: Some permission are defined more then once
-  #   filetype: android/apk
-  #   heur_id: 1
-  #   name: Duplicate permission definition
-  #   score: 100
-  # - description: This APK uses  permissions that can be dangerous
-  #   filetype: android/apk
-  #   heur_id: 2
-  #   name: Dangerous permissions
-  #   score: 100
-  # - description: This APK uses unknown permissions
-  #   filetype: android/apk
-  #   heur_id: 3
-  #   name: Unknown permissions
-  #   score: 10
-  # - description: This APK is not signed. Signing an APK is required to publish on Google Play.
-  #   filetype: android/apk
-  #   heur_id: 4
-  #   name: Unsigned APK
-  #   score: 400
+   - description: Some permission are defined more then once
+     filetype: android/apk
+     heur_id: 1
+     name: Duplicate permission definition
+     score: 100
+   - description: This APK uses  permissions that can be dangerous
+     filetype: android/apk
+     heur_id: 2
+     name: Dangerous permissions
+     score: 100
+   - description: This APK uses unknown permissions
+     filetype: android/apk
+     heur_id: 3
+     name: Unknown permissions
+     score: 10
+   - description: This APK is not signed. Signing an APK is required to publish on Google Play.
+     filetype: android/apk
+     heur_id: 4
+     name: Unsigned APK
+     score: 400
   - description: This APK uses suspicious features
     filetype: android/apk
     heur_id: 5
@@ -73,7 +73,7 @@ heuristics:
     score: 10
   - description: This APK has a score between 20 and 50 on MobSF
     filetype: android/apk
-    heur_id: 9
+    heur_id: 8
     name: Critical score
     score: 100
   - description: This APK has a score between 20 and 50 on MobSF
